# Clash-Royale-Bot

./: .gitignore  README.md  bot.py  config.py  control_panel.py  errors.py  main.py  pyproject.toml  stop_bot.sh  update_bot.sh
cogs/: __init__.py  admin.py  checks.py  clan.py  links.py  misc.py  recruit.py  reminders.py  resolvers.py  war.py
commands/: average.py  clan.py  clanaverage.py  currentwar.py  editmemberroles.py  editperms.py  forcelink.py  info.py  lastwar.py  link.py  members.py  nicklink.py  nthwar.py  player.py  profile.py  rankings.py  reminders.py  spyai.py  stats.py  train_ppo.py  viewlinks.py  viewmemberroles.py  viewnicks.py  viewperms.py  whotokick.py  whotopromote.py  wipelinks.py
db/: database.py  repository.py
docs/: index.html
linode/: DEPLOY.md  control_panel.py  crbot.service  crpanel.service
linode/static/: guide.html  style.css
linode/templates/: base.html  database.html  edit_env.html  files.html  index.html  login.html
services/: clash_royale.py  deck_ai.py  http.py  scoring.py
templates/: database.html  files.html  index.html
tests/: test_deck_ai.py  test_http_client.py  test_reminders.py  test_repository.py  test_spy_ai.py  test_war_history.py
ui/: embeds.py  emojis.py  views.py
utils/: api.py  database.py  helpers.py  scores.py
