[project]
name = "clash-royale-bot"
version = "2.0.0"
description = "Discord bot for Clash Royale clan management"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.7.1,<3",
    "aiohttp>=3.14.1,<4",
    "aiosqlite>=0.20",
    "cachetools>=5.5",
    "numpy>=2.5.0",
    "matplotlib>=3.11.0",
    "python-dotenv>=1.2.2",
    "prettytable>=3.18.0",
]

[project.optional-dependencies]
# The Flask control panel (control_panel.py) runs on the Linode host only.
panel = ["flask>=3.0"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "ASYNC"]

[tool.ruff.lint.per-file-ignores]
# /info embed text is user-visible copy; don't wrap it for line length.
"cogs/misc.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
